force-app/main/default/objects/CBK_FlexQueueMonitorSetting__c/CBK_FlexQueueMonitorSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Almacén de configuración de las distintos tipos monitorización  de la cola FlexQueue a aplicar.</description>
    <label>FlexQueue Monitor Settings</label>
</CustomObject>