force-app/main/default/objects/CBK_FlexQueueMonitorSetting__c/fields/CBK_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>CBK_Aplicacion__c</fullName>
    <description>Nombre de aplicación desde que se invoca la funcionalidad batch.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Aplicación</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>