force-app/main/default/objects/CBK_FlexQueueMonitorSetting__c/fields/CBK_DestinatarioCorreoCCO__c.field-meta.xml
<CustomField>
    <fullName>CBK_DestinatarioCorreoCCO__c</fullName>
    <description>Dirección a informar en el correo de notificación como destinatario en copia oculta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Destinatario Notificación (CCO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>