force-app/main/default/objects/CBK_FlexQueueMonitorSetting__c/fields/CBK_DestinatarioCorreoTo__c.field-meta.xml
<CustomField>
    <fullName>CBK_DestinatarioCorreoTo__c</fullName>
    <description>Dirección a informar en el correo de notificación como destinatario.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Destinatario Notificación (Para)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>