force-app/main/default/objects/CBK_FlexQueueMonitorSetting__c/fields/CBK_RemitenteCorreo__c.field-meta.xml
<CustomField>
    <fullName>CBK_RemitenteCorreo__c</fullName>
    <description>Dirección a informar en el correo de notificación como remitente.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Remitente Notificación (De)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>